# BrainHack2024

./: Dockerfile  Guia_Client.docx  README.md  fx  fx.cpp  main  main.cpp  play.ssh  sfml-app  velocity  velocity.cpp
Game/: play.bat
client/: CMakeLists.txt  all.bat  build.bat  data.cpp  main.cpp  variable.h
client/bat_files/: build.bat  run.bat
consumer/: client.py
include/: structure.hpp
server/: main.py
src/: elements.cpp  functions.cpp  hammer.cpp  has_collisions.cpp  object.cpp  pendulum.cpp
unicorn/: testp.py
